new implimentations in TaskTracker